# LALA-next

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .vercelignore  AGENTS.example.md  Dockerfile  README.md  SESSION_HANDOFF.md  compose.local.yml  design-qa.md  openapitools.json  pyproject.toml  vercel.json
.azure/: deployment-plan.md
.github/: copilot-instructions.md
.github/workflows/: azure-dev-deploy.yml  azure-dev-terraform-apply.yml  ci.yml  deploy.yml  deployed-web-smoke.yml  terraform-plan.yml
.superpowers/sdd/: final-fix-report.md  task-4-report.md  task-5-report.md
apps/: __init__.py
apps/api/: __init__.py
apps/flutter_app/: README.md  pubspec.yaml
apps/workers/: __init__.py
artifacts/source-diagnosis/: README.md
clients/flutter/: README.md  pubspec.yaml
clients/flutter_generated/: README.md  pubspec.yaml
deploy/vercel/: flutter-static.vercel.json
docs/api/: flutter-contract.md  flutter-handoff-checklist.md  openapi-usage.md
docs/data/: data-dictionary.md
docs/devlogs/: 2026-07-07-aws-migration.md  2026-07-11-deploy-automation.md
docs/migration/: fastapi-flutter-contract.md  legacy-flask-retirement.md  legacy-ui-ux-parity.md  multi-session-briefs.md  source-diagnosis-traceability.md  sql-canonicalization.md  wave1-completion-audit.md
docs/operations/: add_onconflict.py  aws-deployment-runbook.md  azure-dev-deployment.md  azure-migration-status.md  azure-resources.md  azure-terraform-state-backend.md  card-source-sample-collection-guide.md  card-spending-source-inventory.md  cloud-hosting-comparison-2026-07-06.md  completion-backlog.md  copilot-cli-operations.md  data-restore-local-to-prod.md  docent-quality-manual-qa-strategy.md  identity-rollout.md  key-vault-reuse.md  live-azure-smoke-2026-06-11.md  live-db-rollout.md  logto-deploy-guide.md  nationwide-expansion-plan.md  nationwide-fallback-score-plan.md  observability-plan.md  onprem-ai-speech-cost-fallback.md  onprem-browser-ios-revalidation.md  onprem-cutover-rollback.md  onprem-cutover-status-2026-06-26.md  onprem-data-secrets-migration.md  onprem-edge-backup-alert-ha.md  onprem-migration-overview.md  onprem-post-contest-auth-transition.md  onprem-prerequisites.md  onprem-runbook-docker-macos.md  onprem-runbook-linux.md  onprem-runbook-windows.md  post-merge-auth-deployment-guide.md  rag-regeneration-strategy.md  review-mention-preprocessing-strategy.md  team-ec2-access.md  verification.md  (+5 more)
scripts/: generate_dart_client.sh  patch_dart_dio_serializers.py  prepare_flutter_vercel_static_output.py
(+688 files in other folders)
