[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lala-next"
version = "0.1.0"
description = "FastAPI migration skeleton for LALA-next"
requires-python = ">=3.11"
dependencies = [
    "azure-identity>=1.16",
    "azure-keyvault-secrets>=4.8",
    "fastapi>=0.110",
    "httpx>=0.27",
    "openai>=1.40",
    "psycopg2-binary>=2.9",
    "PyJWT[crypto]>=2.8",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "uvicorn>=0.29",
    "openpyxl>=3.1",
    "hangul-romanize>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*"]

[tool.setuptools.package-data]
"apps.api.app.data" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
pythonpath = ["."]
addopts = "-q"
