[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lala-next"
version = "0.1.0"
description = "FastAPI backend for the LALA local-experience platform"
requires-python = ">=3.11"
dependencies = [
    "azure-identity>=1.16",
    "azure-keyvault-secrets>=4.8",
    "boto3>=1.34",
    "fastapi>=0.110",
    "httpx>=0.27",
    "openai>=1.40",
    "psycopg2-binary>=2.9",
    "PyJWT[crypto]>=2.8",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "uvicorn>=0.29",
    "openpyxl>=3.1",
    "hangul-romanize>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "detect-secrets>=1.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*"]

[tool.setuptools.package-data]
"apps.api.app.data" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["build", "dist", ".venv", "local-artifacts", "artifacts"]

[tool.ruff.lint]
# 점진적 도입: 안정적 자동교정 위주. 코드베이스 검증 후 확장 가능.
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
  "E501",   # line-too-long: ruff format 이 실제 포맷 담당. 긴 줄 정비는 별도.
  "SIM117", # multiple-with-statements: 가독성 중립, 수동 병합은 별도 정비.
  "SIM112", # uncapitalized-env-vars: _bash.py 의 Windows 환경변수(ProgramFiles 등) 정상 사용.
]

[tool.mypy]
# 점진적(strict 아님): apps/api 집중, 외부 라이브러리 import는 무시.
python_version = "3.13"
ignore_missing_imports = true
namespace_packages = true
files = ["apps/api/app"]
